<resources>
    <string name="app_name">酷码商城</string>

    <!-- Strings related to login -->
    <string name="prompt_mobile">手机号</string>
    <string name="prompt_code">验证码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">用户名不正确</string>
    <string name="error_invalid_password">密码无效</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="register_protocol">《酷吗商城协议》</string>
</resources>
